# health-team-1-poc

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  forms.py  llm.py  routes.py
app/templates/: base.html  index.html  llm.html  multi_llm.html  settings.html
guidelines/: default-prompt.txt  ncg.yaml
