[project]
name = "health-team-1-poc"
version = "0.1.0"
description = "Proof-of-concept system to provide tumour advice to clinicians for the treatment of breast cancer."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0,<4.0",
    "Flask-WTF>=1.2,<2.0",
    "markdown>=3.10",
    "python-dotenv>=1.0,<2.0",
    "requests>=2.32,<3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = ["app", "config.py", "run.py", "README.md"]
